Woff2 font awesome
- Replaced font awesome's woff fonts with woff2 format to reduce application bandwidth.

--- a/src/MvcTemplate.Web/wwwroot/css/font-awesome/regular.css
+++ b/src/MvcTemplate.Web/wwwroot/css/font-awesome/regular.css
@@ -8,7 +8,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: block;
-    src: url("../font-awesome/fonts/fa-regular-400.woff") format("woff");
+    src: url("../font-awesome/fonts/fa-regular-400.woff2") format("woff2");
 }
 
 .far {
