Consistent form group naming
- Renamed form actions class to control actions to keep consistency with other form group children.

--- a/src/MvcTemplate.Web/wwwroot/css/shared/widget-box.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/widget-box.css
@@ -97,12 +97,12 @@
     text-align: right;
 }
 
-.widget-content .form-actions {
+.widget-content .control-actions {
     text-align: right;
 }
 
 @media (max-width: 991.98px) {
-    .widget-content .form-actions {
+    .widget-content .control-actions {
         text-align: center;
     }
 }
