--- a/src/MvcTemplate.Web/Templates/Module/Web/Delete.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Web/Delete.cshtml
@@ -64,7 +64,7 @@
             }
             <form asp-antiforgery="true">
                 <div class="form-group row">
-                    <div class="form-actions col-xl-6">
+                    <div class="control-actions col-xl-6">
                         <button class="btn btn-primary">@@Resource.ForAction("Submit")</button>
                     </div>
                 </div>
