--- a/src/MvcTemplate.Web/Templates/Module/Web/Edit.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Web/Edit.cshtml
@@ -67,7 +67,7 @@
                 </div>
                 }
                 <div class="form-group row">
-                    <div class="form-actions col-xl-6">
+                    <div class="control-actions col-xl-6">
                         <button class="btn btn-primary">@@Resource.ForAction("Submit")</button>
                     </div>
                 </div>
