--- a/src/MvcTemplate.Web/Views/Administration/Accounts/Create.cshtml
+++ b/src/MvcTemplate.Web/Views/Administration/Accounts/Create.cshtml
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <div class="form-actions col-xl-6">
+                    <div class="control-actions col-xl-6">
                         <button class="btn btn-primary">@Resource.ForAction("Submit")</button>
                     </div>
                 </div>
