--- a/src/MvcTemplate.Web/Views/Administration/Roles/Delete.cshtml
+++ b/src/MvcTemplate.Web/Views/Administration/Roles/Delete.cshtml
@@ -39,7 +39,7 @@
             </div>
             <form asp-antiforgery="true">
                 <div class="form-group row">
-                    <div class="form-actions col-xl-6">
+                    <div class="control-actions col-xl-6">
                         <button class="btn btn-primary">@Resource.ForAction("Submit")</button>
                     </div>
                 </div>
