--- a/src/MvcTemplate.Web/Views/Administration/Roles/Edit.cshtml
+++ b/src/MvcTemplate.Web/Views/Administration/Roles/Edit.cshtml
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <div class="form-actions col-xl-6">
+                    <div class="control-actions col-xl-6">
                         <button class="btn btn-primary">@Resource.ForAction("Submit")</button>
                     </div>
                 </div>
