--- a/src/MvcTemplate.Web/wwwroot/css/application/auth/shared.css
+++ b/src/MvcTemplate.Web/wwwroot/css/application/auth/shared.css
@@ -38,8 +38,8 @@
 }
 
 .input-group input:focus {
-    box-shadow: none;
-    outline: none;
+    box-shadow: none !important;
+    outline: none !important;
 }
 
 .input-group input::-ms-clear {
